--- a/functions/views/404.html
+++ b/functions/views/404.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No encontrado</title>
     <link rel="stylesheet" href="/css/ayuda.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <span class="logo"><a href="/"><img src="/img/logo" alt="Logo" height="30"></a></span>
+        <span class="logo"><a href="/"><img src="/img/logo.png" alt="Logo" height="30"></a></span>
         <span class="help"><a href="/ayuda">Ayuda</a></span>
     </nav>
     <div class="content">
@@ -30,7 +31,7 @@
             </div>
             <div class="column2" style="font-size:12px">
                 <a href="/"><img src="/img/logo.png" alt="Logo" height="30"></a></span>
-                <div>© {{_copyYearyear}} BizName</div>
+                <div>© {{_copyYear}} BizName</div>
                 <div>
                     Documentación creada en base al proyecto de código abierto <a href="https://github.com/marianopaulin02/FireDocs/" target="_blank">FireDocs</a>.
                 </div>
